ipc/ipdl/test/ipdl/error/IntrAsyncManager.ipdl
//error: protocol `IntrAsyncManagee' requires more powerful send semantics than its manager `IntrAsyncManager' provides

include protocol IntrAsyncManagee;

[ChildProc=any]
async protocol IntrAsyncManager {
    manages IntrAsyncManagee;
parent:
    async IntrAsyncManagee();
};
